--- a/rootdir/factory_init.rc
+++ b/rootdir/factory_init.rc
@@ -13,24 +13,24 @@ on early-init
     # Set init and its forked children's oom_adj.
     write /proc/1/oom_score_adj -1000
 
-    # Disable sysrq from keyboard
-    write /proc/sys/kernel/sysrq 0
-
-    # Apply strict SELinux checking of PROT_EXEC on mmap/mprotect calls.
-    write /sys/fs/selinux/checkreqprot 0
-
-    # Set the security context for the init process.
-    # This should occur before anything else (e.g. ueventd) is started.
-    setcon u:r:init:s0
+#    # Disable sysrq from keyboard
+#    write /proc/sys/kernel/sysrq 0
+#
+#    # Apply strict SELinux checking of PROT_EXEC on mmap/mprotect calls.
+#    write /sys/fs/selinux/checkreqprot 0
+#
+#    # Set the security context for the init process.
+#    # This should occur before anything else (e.g. ueventd) is started.
+#    setcon u:r:init:s0
 
     # Set the security context of /adb_keys if present.
     restorecon /adb_keys
 
-    # Shouldn't be necessary, but sdcard won't start without it. http://b/22568628.
-    mkdir /mnt 0775 root system
-
-    # Set the security context of /postinstall if present.
-    restorecon /postinstall
+#    # Shouldn't be necessary, but sdcard won't start without it. http://b/22568628.
+#    mkdir /mnt 0775 root system
+#
+#    # Set the security context of /postinstall if present.
+#    restorecon /postinstall
 
     start ueventd
 
